@@ -1,6 +1,13 @@
 2006-05-22  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/JLabel.java
+	(AccessibleJLabel.getAccessibleName): New method (override),
+	(setLabelFor): Fire 'labelFor' property change event before other
+	events.
+
+2006-05-22  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/JLabel.java
 	(AccessibleJLabel.getAccessibleRole): New method (override).
 
 2006-05-22  Tom Tromey  <tromey@redhat.com>
